[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/FocusEditor.gd" type="Script" id=2]
[ext_resource path="res://Art/DejaVuSansMono.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/FocusImage.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_bottom = -10
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_right = 170.0
margin_bottom = 14.0
text = "Magical Elements"
align = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 170.0
margin_bottom = 22.0

[node name="ElementContainer" type="ScrollContainer" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 26.0
margin_right = 170.0
margin_bottom = 293.0
size_flags_vertical = 3

[node name="ElementList" type="VBoxContainer" parent="CanvasLayer/Panel/VBoxContainer/ElementContainer"]
margin_right = 170.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 297.0
margin_right = 170.0
margin_bottom = 311.0
text = "Magical Foci"
align = 1

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 315.0
margin_right = 170.0
margin_bottom = 319.0

[node name="FociContainer" type="ScrollContainer" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 323.0
margin_right = 170.0
margin_bottom = 590.0
size_flags_vertical = 3

[node name="FociList" type="VBoxContainer" parent="CanvasLayer/Panel/VBoxContainer/FociContainer"]
margin_right = 170.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="FocusEditor" type="WindowDialog" parent="CanvasLayer2"]
margin_left = 129.894
margin_top = 100.093
margin_right = 734.894
margin_bottom = 485.093
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/FocusEditor"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FocusName" type="Label" parent="CanvasLayer2/FocusEditor/VBoxContainer"]
margin_right = 605.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Focus Name"
align = 1

[node name="FocusFlavourText" type="Label" parent="CanvasLayer2/FocusEditor/VBoxContainer"]
margin_top = 52.0
margin_right = 605.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "Focus Flavour Text"
align = 1

[node name="FocusImage" type="TextureRect" parent="CanvasLayer2/FocusEditor/VBoxContainer"]
margin_top = 73.0
margin_right = 605.0
margin_bottom = 361.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
script = ExtResource( 4 )

[node name="ButtonContainer" type="HBoxContainer" parent="CanvasLayer2/FocusEditor/VBoxContainer"]
margin_top = 365.0
margin_right = 605.0
margin_bottom = 385.0

[node name="EquipButton" type="Button" parent="CanvasLayer2/FocusEditor/VBoxContainer/ButtonContainer"]
margin_right = 300.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Equip"

[node name="DisenchantButton" type="Button" parent="CanvasLayer2/FocusEditor/VBoxContainer/ButtonContainer"]
margin_left = 304.0
margin_right = 605.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Disenchant"

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="PopupPanel" type="PopupPanel" parent="CanvasLayer3"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 208.0
margin_top = 190.0
margin_right = -256.0
margin_bottom = -114.0

[node name="Panel" type="Panel" parent="CanvasLayer3/PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer3/PopupPanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Label" type="Label" parent="CanvasLayer3/PopupPanel/Panel/VBoxContainer"]
margin_right = 532.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "You DIED....

Would you like to go again?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer3/PopupPanel/Panel/VBoxContainer"]
margin_top = 220.0
margin_right = 532.0
margin_bottom = 240.0

[node name="ExitButton" type="Button" parent="CanvasLayer3/PopupPanel/Panel/VBoxContainer/HBoxContainer"]
margin_right = 264.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "NO"

[node name="RestartButton" type="Button" parent="CanvasLayer3/PopupPanel/Panel/VBoxContainer/HBoxContainer"]
margin_left = 268.0
margin_right = 532.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "YES"

[node name="CheckBox" type="CheckBox" parent="CanvasLayer3/PopupPanel/Panel/VBoxContainer"]
margin_top = 244.0
margin_right = 532.0
margin_bottom = 268.0
pressed = true
text = "Enable Tutorial on Restart"
